# HiddifyAndroidRefactor

./: .replit  MARFANET_README.txt  build.gradle  build_apk.sh  gradle.properties  local.properties  settings.gradle
app/: build.gradle  debug.keystore
app/src/main/cpp/: CMakeLists.txt  xray-core-jni.cpp
attached_assets/: Pasted--Configure-project-app-WARNING-The-option-setting-android-defaults-buildfeatures-buildconfig-tru-1747846133424.txt  Pasted--Eliminating-KAPT-Room-Build-Errors-Reference-for-the-HiddifyNG-Ubuntu-build-pipeline--1747831179693.txt  Pasted--Kotlin-Compilation-Error-Triage-Hiddify-Android-1-Current-blocker-The-build-now-stops-at--1747832498370.txt  Pasted--Kotlin-Compilation-Failure-Unresolved-References-Task-app-compileReleaseKotlin--1747837759753.txt  Pasted--Round-3-Resource-linking-blockers-before-Kotlin-is-fully-green-Current-gradle-phase-ap-1747846677942.txt  Pasted--SYSTEM-INSTRUCTIONS-You-are-MarFaNet-CI-AI-a-release-engineering-companion-for-an-Android--1747837045134.txt  Pasted--T-0330-INFO-org-gradle-launcher-daemon-server-exec-LogToClient-The-client--1747813121905.txt  Pasted--T-0330-INFO-org-gradle-launcher-daemon-server-exec-LogToClient-The-client--1747813416947.txt  Pasted--T-0330-INFO-org-gradle-launcher-daemon-server-exec-LogToClient-The-client--1747813678993.txt  Pasted--T-0330-INFO-org-gradle-launcher-daemon-server-exec-LogToClient-The-client--1747813937092.txt  Pasted--at-org-gradle-launcher-exec-RootBuildLifecycleBuildActionExecutor-execute-RootBuildLifecycle-1747841160989.txt  Pasted-2025-05-21T15-48-43-166-0330-DEBUG-org-jetbrains-kotlin-gradle-plugin-statistics-KotlinBuildStatH-1747830011678.txt  Pasted-2025-05-21T15-56-04-916-0330-DEBUG-org-gradle-internal-operations-DefaultBuildOperationRunner-Co-1747830378411.txt  Pasted-2025-05-21T15-59-33-177-0330-DEBUG-org-jetbrains-kotlin-gradle-plugin-statistics-KotlinBuildStatH-1747830568194.txt  Pasted-2025-05-21T16-05-14-466-0330-DEBUG-org-jetbrains-kotlin-gradle-plugin-KotlinGradleBuildServices-I-1747830965111.txt  Pasted-2025-05-21T16-24-37-374-0330-DEBUG-org-jetbrains-kotlin-gradle-plugin-KotlinGradleBuildServices-I-1747832122887.txt  Pasted-2025-05-21T17-30-43-152-0330-ERROR-org-gradle-internal-buildevents-BuildExceptionReporter-2025--1747836097187.txt  (+20 more)
downloads/: marfanet-final.apk
(+91 files in other folders)
